refactor(core): polish service naming, Dockerfile jar target, and clean JPA configurations